changing text sizes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,10 @@ p {
   display: none;  /* Safari and Chrome */
 }
 
+.text-sm{
+  /* padding-top: 8px; */
+}
+
 input{ 
   font-family: 'Times New Roman', Times, serif;
 }
