--- a/styles/slick.css
+++ b/styles/slick.css
@@ -17,6 +17,11 @@
         touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
 }
+@media only screen and (max-width: 600px) {
+    .slick-list, .slick-track, .slick-slider{
+        height: 100%;
+    }
+}
 
 .slick-list
 {
